MDEV-10547: Test multi_update_innodb fails with InnoDB 5.7

The failure happened because 5.7 has changed the signature of
the

  bool handler::primary_key_is_clustered() const

virtual function ("const" was added). InnoDB was using the old
signature which caused the function not to be used.